# Url_Shortener

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  env.example  manage.py  pyproject.toml
.github/workflows/: ci.yml
shortener/: asgi.py  models.py  settings.py  urls.py  utils.py  wsgi.py
url_shortener/: admin.py  models.py  serializers.py  test_api.py  urls.py  views.py
url_shortener/migrations/: 0001_initial.py  0002_alter_url_original_url_alter_url_short_url.py
